<resources>
    <string name="app_name">GitHub User App</string>

    <!-- Other string resources-->

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>
    <string-array name="data_photo">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
        <item>user4</item>
        <item>user5</item>
        <item>user6</item>
        <item>user7</item>
        <item>user8</item>
        <item>user9</item>
        <item>user10</item>
    </string-array>

    <string-array name="data_github_url">
        <item>https://github.com/JakeWharton</item>
        <item>https://github.com/amitshekhariitbhu</item>
        <item>https://github.com/romainguy</item>
        <item>https://github.com/chrisbanes</item>
        <item>https://github.com/tipsy</item>
        <item>https://github.com/ravi8x</item>
        <item>https://github.com/jasoet</item>
        <item>https://github.com/budioktaviyan</item>
        <item>https://github.com/hendisantika</item>
        <item>https://github.com/sidiqpermana</item>
    </string-array>

    <string name="background_photo_profile">Backgroung photo profile</string>
    <string name="icon_location">Icon Location</string>
    <string name="icon_company">Icon Company</string>
    <string name="zero_number">0</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="splash">GitHub User App \n Created by Diyat</string>
    <string name="github_logo">Github Logo</string>
    <string name="icon_share">Icon Share</string>
    <string name="search">Search</string>
    <string name="title_activity_github_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_most_stars">Most stars</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>